# $Id$

Revision history for Data::ObjectDriver

0.04_XX
    - Added has_a() construct to build linking methods between classes.
    - remove() returns number of affected rows, with DBI semantics.
    - Bulk inserting of data can now be done with the new bulk_insert()
      Class method.  It uses Postgres' COPY command or MySQL's 
      multi-value inserts to load data quickly.

0.03  2006.08.05
    - Added an inflate and deflate mechanism to memcached caching. When objects
      are stored in memcached, they are now deflated to a hash reference
      containing only the column values; retrieving the object from memcached
      automatically inflates the object to the full representation. Classes
      can override inflate and deflate to store additional information in the
      memcached representation that's kept automatically up-to-date.
    - Added a SimplePartition driver, which helps to make partitioning, well,
      simpler. Still to come: documentation and a tutorial on partitioning.
    - Many, many bug fixes and improvements to the caching drivers.
    - Added detection of changed columns, such that only columns that have
      been changed are updated in an UPDATE statement.
    - Added a clear_cache method to the D::O::D::Cache::RAM class.
    - Added cross-DBD error handling, which maps local error codes to error
      constants in Data::ObjectDriver::Errors. The list of supported errors
      is pretty miniscule thus far (just one), but will be expanded as needed.
    - Added support for query profiling (Data::ObjectDriver::Profiler), which
      counts queries, calculates frequent queries, and can produce reports.
    - Added support for optional table prefixes, which simplifies setting up
      identical schemas in the same database.
    - Added an optional $terms argument to D::O::D::DBI->update, which can
      add additional terms to the UPDATE statement besides just the PK.