@@ -8,6 +8,12 @@ Revision history for Data::ObjectDriver
     - Bulk inserting of data can now be done with the new bulk_insert()
       Class method.  It uses Postgres' COPY command or MySQL's 
       multi-value inserts to load data quickly.
+    - The new() constructor for objects now accepts column name/value
+      pairs which are passed to a new init() method.
+    - The new init() method can be called on any object to set
+      many parameters in one call.
+    - This init() method can also be overridden, allowing for custom
+      initialization code.
 
 0.03  2006.08.05
     - Added an inflate and deflate mechanism to memcached caching. When objects
